<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.information.InformationFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:title="@string/informasi"
            app:expandedTitleTextAppearance="@style/exp_toolbar_title"
            app:collapsedTitleTextAppearance="@style/collapsed_toolbar_title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="0.7"
                android:contentDescription="@string/image" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/textHeading1"
                style="@style/textStyle_16_semiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:text="@string/apa_itu_covid_19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:id="@+id/btn_mengenal"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="14dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Mengenal"
                android:textAllCaps="false"
                android:backgroundTint="@color/shape"
                android:textColor="@color/textColor1"
                android:textSize="16sp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:textAlignment="textStart"
                app:icon="@drawable/ic_mengenal"
                app:iconPadding="20dp"
                app:iconTint="@null"
                app:cornerRadius="10dp"
                app:rippleColor="@color/green1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textHeading1" />

            <Button
                android:id="@+id/btn_mencegah"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/shape"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="Mencegah"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/textColor1"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_mencegah"
                app:iconPadding="20dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_mengenal"
                app:rippleColor="@color/green1" />

            <Button
                android:id="@+id/btn_mengobati"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/shape"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="Mengobati"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/textColor1"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_mengobati"
                app:iconPadding="20dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_mencegah"
                app:rippleColor="@color/green1" />

            <Button
                android:id="@+id/btn_mengantisipasi"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/shape"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="Mengantisipasi"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/textColor1"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_mengantisipasi"
                app:iconPadding="20dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_mengobati"
                app:rippleColor="@color/green1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        style="@style/BottomNavigationView"
        android:id="@+id/bottom_navigation_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_navigation"
        app:menu="@menu/bottom_navigation_menu"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        android:layout_gravity="bottom"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>