...
                android:layout_marginTop="22dp"
                android:text="@string/update_kasus_covid_19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationTextInputLayout" />

            <Button
                android:id="@+id/btnSelengkapnya"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:insetTop="0dp"
...
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/selengkapnya"
                android:textAllCaps="false"
                android:textColor="@color/green1"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationTextInputLayout"
                app:layout_constraintVertical_bias="0.476" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"
...
                android:layout_marginStart="10dp"
                android:text="@string/berita_covid_19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textHeading3"
                tools:layout_editor_absoluteX="10dp"
                tools:listitem="@layout/item_row_news" />
...
